<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>
        <variable
            name="presenter"
            type="com.example.framgiababatundefatoyesunday.mymvpfundemo.login.LoginPresenter"
            />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:text="@={presenter.email}"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextEmail"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:text="@={presenter.password}"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextPassword"
            android:onClick="@{ () -> presenter.register()}"
            android:padding="10dp"
            android:text="@string/text_register"
            android:textColor="@color/colorAccent"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:onClick="@{ () -> presenter.doLogin()}"
            android:padding="10dp"
            android:text="@string/btn_login"
            />
    </RelativeLayout>
</layout>